# MediDocsSummary

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup-rds-automation.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 622503188e18_drop_app_settings_table.py  894c05a6a4d9_initial_migration.py
app/: main.py
app/api/: evaluation.py  prompts.py  router.py  settings.py  statistics.py  summary.py
app/core/: config.py  constants.py  database.py  security.py
app/models/: __init__.py  evaluation_prompt.py  prompt.py  setting.py  usage.py
app/schemas/: evaluation.py  prompt.py  statistics.py  summary.py  usage.py
app/services/: evaluation_prompt_service.py  evaluation_service.py  model_selector.py  prompt_service.py  sse_helpers.py  statistics_service.py  summary_service.py  usage_service.py
app/templates/: base.html  index.html  (+7 more)
docs/: CHANGELOG.md  MediDocsReferral_setup.md  MediDocsSummary_setup.md  iam-policies.json  quality-improvements-2026-07-07.md  rds-password-rotation.md  security-error-handling-guide.md  全科共通退院時サマリ.md
ecs/: iam-policies.json  task-definition.json
frontend/: DEVELOPMENT.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: create_secrets.py  deploy.sh  generate_token.py  project_structure.py  project_structure.txt  test_structure.py  test_structure.txt  testcode_structure.txt  update_packages.py
tests/: conftest.py
(+51 files in other folders)
