[project]
name = "medidocs-referral"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    # === Web Framework ===
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "starlette==0.38.6",
    "python-multipart==0.0.18",
    "Jinja2==3.1.6",
    # === Database ===
    "SQLAlchemy==2.0.40",
    "psycopg2-binary==2.9.10",
    "alembic==1.18.1",
    # === AI Providers ===
    "anthropic==0.67.0",
    "boto3==1.40.30",
    "google-cloud-aiplatform==1.113.0",
    "google-genai==1.52.0",
    "google-generativeai==0.8.4",
    # === HTTP / Networking ===
    "httpx==0.28.1",
    "requests==2.32.5",
    # === Data Validation ===
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    # === Utilities ===
    "python-dotenv==1.0.1",
    "PyYAML==6.0.3",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.1",
    "coverage==7.8.2",
    "pyright==1.1.408",
]
